# auraview

./: CHANGELOG.md  README.md  build.sh  del.txt  install.sh  pyproject.toml  requirements.in  requirements.txt  setup.py
auraview/: main.py  version.py
auraview/basic_functions/: os_funs.py  time_funs.py
auraview/core/: image_controller.py  photo_module.py
auraview/gui/: gui.py  gui_functions.py
chitram/: help.py  main.py
chitram/core/: core.py  photo_manager.py  photo_module.py
chitram/gui/: gui.py  gui_functions.py
docs/: howtobuild.md  pypi.md  test.md
